Fix align center and navigation with flex wrap

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ section#sec_one {
         display:flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
         padding-top: 10%;
         padding-bottom: 10%;
         gap: 2em;
@@ -97,9 +98,9 @@ section#sec_two h1 {
         margin-left: auto;
         margin-right: auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
-        gap:1em;
+        gap:5%;
     }
     
 .cuadrado {
@@ -108,7 +109,7 @@ section#sec_two h1 {
         border: 5px solid #3882f6;
         border-radius: 25px;
     }
-    
+
 #contenedor_cuadrados p {
         max-width: 160px;
         text-align: center;
@@ -137,6 +138,7 @@ section#sec_three {
     /*////////sección 4///////////////////////////////////*/
 
 section#sec_four > div {
+    max-width:900px;
     background-color: #3882f6;
     color: #E5E7Eb;
     border-radius: 10px;
@@ -145,9 +147,10 @@ section#sec_four > div {
     margin-bottom: 150px;
     margin-left: auto;
     margin-right: auto;
-    padding: 25px 50px 25px 50px;
+    padding: 50px 50px 50px 50px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 1em;
 
 }
